--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
-          node_version: 19
+          node-version: 19
       - name: Install Dependencies
         run: npm install
       - name: Build Project
