--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-deploy-scripts": "^2.1.0",
     "bootstrap": "^5.2.3",
     "eslint": "^8.32.0",
     "react": "^18.2.0",
