--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::415027062036:oidc-provider/token.actions.githubusercontent.com
+          role-to-assume: arn:aws:iam::415027062036:role/site-deploy
           role-session-name: upload-session
           aws-region: ${{ env.AWS_REGION }}
       - name: upload build to s3 bucket
